# photokit-api

./: .gitignore  LAUNCH_POSTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/photokit_api/: __init__.py  __main__.py  cli.py  db.py  photokit.py
src/photokit_api/server/: app.py  auth.py  deps.py  models.py
src/photokit_api/server/routes/: albums.py  assets.py  images.py  stats.py
tests/: conftest.py  test_db.py  test_photokit.py  test_routes.py
